# alex_uni

./: .gitignore  Cargo.toml  README.md  rustfmt.toml  tailwind.config.js
.cargo/: config.toml
.sqlx/: query-1c51d861d0aca37e85aa140de15f2a3a84efa7ab86a68149d72ca57afd8a2010.json  query-265034843a8cb0fc88fdf41339471df98b549a29dece6416f06562c31e59a6d5.json  query-3f88dba523cd77705a7c0029a4b87b74b872f3378ac4c28c04db639c529a3b5a.json  query-4992cfcde29ab4e5e5508f362859f3eddb5b9d2b00f06e049ed0370518522005.json  query-7138e45abf3cee956029fcfb7a45e179a664a81ab50b28c118aea687ed3bfd37.json  query-72c15a6f971965b23daee132f699bb17a2bec24b3b7fbdf19a13442cf9904f99.json  query-7d33fe6c29339060b8bfa6131c01a466402c1bf9a3cf51db751375b1cba2de66.json  query-8ce8dbcf9acbebec7253036b2a86a59ae42f33d1159f0cded030e6ed80d41de4.json  query-983b458d4aa3d0cc965964be1c1618f2bd57cefab960775df668e73897447ec0.json  query-a710cc204941a51a9085c5053ff63ec13badbfe6bae510792f5c4864c32f93b6.json  query-a852b79a06af891a3f3a4b4d559f041cd543791cc5bd082fa7c0672f52e8cf18.json  query-be4c24d6746242d8131d2653d89d91685e8361690b2f65703ddc6cddb0f5dd82.json  query-cc10152d9e0a26c59aabbea02050ba74351c9bf3c54d3710a3be00e53270edf9.json  query-d9e4e287894e130f2c5b0aa3981ec0d26ec6764bf0aca3d6433c6d36c2959901.json  query-e6ec22996d55ef28d5d56fdfc9d451a88f1592c1923a40e7499b20936e5c847b.json
migrations/: 20230926145605_user_table.sql  20230927090657_term_subscribers.sql  20230927090712_term_subjects.sql  20230927090823_classes.sql  20230927090858_subjects.sql  20230927100732_professors.sql  20230927102233_locations.sql  20230928133633_completed.sql  20230930140202_classes_view.sql  20231003102313_student_info.sql  20231004091516_programs.sql
sql/: select_subject_by_id.sql  select_subjects_choices.sql
src/: app.rs  class.rs  dropdown.rs  grades.rs  lib.rs  login.rs  main.rs  navbar.rs  profile.rs  theme.js  theme.rs  timetable.rs  utils.rs
src/components/: accordion.rs  checkbox.rs  dropdown.rs  error.rs  input.rs  mod.rs  navbar.rs  suserr.rs
src/login/: mock.rs  mod.rs
src/registration/: class_card.rs  mod.rs  rem_seats_ws.rs  server_fns.rs  subjects_signal.rs
src/timetable/: grid.rs  list.rs  mod.rs  timetable.rs
src/utils/: and_then_macro.rs  mod.rs
style/: main.scss  tailwind.css  timetable.scss
