[package]
name = "uni_web"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
actix-files = { version = "0.6", optional = true }
actix-web = { version = "4", optional = true, features = ["macros"] }
console_error_panic_hook = "0.1"
cfg-if = "1"
http = { version = "0.2", optional = true }
leptos = { version = "0.5.0-beta", features = ["nightly"] }
leptos_meta = { version = "0.5.0-beta", features = ["nightly"] }
leptos_actix = { version = "0.5.0-beta", optional = true }
leptos_router = { version = "0.5.0-beta", features = ["nightly"] }
wasm-bindgen = "=0.2.87"
web-sys = {version = "0.3.64", features = ["MediaQueryList", "Storage"]}
js-sys = "0.3.64"
serde = "1.0.183"
derive_builder = "0.12.0"
bcrypt = {version = "0.15.0", optional = true}
jsonwebtoken = {version = "8.3.0", optional = true}
chrono = {version = "0.4.28", optional = true}

[features]
default = ["ssr"]
# default = ["hydrate"]
local = []
login = []
hydrate = ["leptos/hydrate", "leptos_meta/hydrate", "leptos_router/hydrate"]
ssr = [
  "dep:actix-files",
  "dep:actix-web",
  "leptos/ssr",
  "leptos_meta/ssr",
  "leptos_router/ssr",
  "dep:leptos_actix",
  "dep:bcrypt",
  "dep:jsonwebtoken",
  "dep:chrono",
]

# Defines a size-optimized profile for the WASM bundle in release mode
[profile.wasm-release]
inherits = "release"
opt-level = 'z'
lto = true
codegen-units = 1
panic = "abort"

[profile.wasm-dev]
inherits = "dev"
codegen-units = 1

[profile.server-dev]
inherits = "dev"
codegen-units = 1

[package.metadata.leptos]
output-name = "uni_web"
site-root = "target/site"
site-pkg-dir = "pkg"
style-file = "style/main.scss"
tailwind-input-file = "style/tailwind.css"
tailwind-config-file = "./tailwind.config.js"
assets-dir = "assets"
site-addr = "127.0.0.1:3000"
reload-port = 3001
end2end-cmd = "npx playwright test"
end2end-dir = "end2end"
browserquery = "defaults"

watch = false
env = "DEV"

bin-features = ["ssr", "local"]
bin-default-features = false
bin-profile-dev = "server-dev"

lib-features = ["hydrate", "local"]
lib-default-features = false
lib-profile-release = "wasm-release"
lib-profile-dev = "wasm-dev"
